@@ -31,6 +31,8 @@
         <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <argLine></argLine>
+        <nexus.runtime.nativeAccessArg>--enable-native-access=ALL-UNNAMED</nexus.runtime.nativeAccessArg>
 
         <javaparser.version>3.28.2</javaparser.version>
         <sqlite-jdbc.version>3.53.4.0</sqlite-jdbc.version>
@@ -143,6 +145,7 @@
                     <version>${maven.surefire-plugin.version}</version>
                     <configuration>
                         <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
+                        <argLine>@{argLine} ${nexus.runtime.nativeAccessArg}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
